// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findNode fail 1`] = `
Object {
  "data": Object {
    "rootNode": SourceFileObject {
      "amdDependencies": Array [],
      "bindDiagnostics": Array [],
      "bindSuggestionDiagnostics": undefined,
      "checkJsDirective": undefined,
      "end": 136,
      "endOfFileToken": TokenObject {
        "end": 136,
        "flags": 0,
        "kind": 1,
        "modifierFlagsCache": 0,
        "parent": [Circular],
        "pos": 135,
        "transformFlags": 0,
      },
      "externalModuleIndicator": NodeObject {
        "decorators": undefined,
        "end": 31,
        "flags": 0,
        "importClause": NodeObject {
          "end": 17,
          "flags": 0,
          "kind": 250,
          "modifierFlagsCache": 0,
          "namedBindings": NodeObject {
            "end": 17,
            "flags": 0,
            "kind": 251,
            "modifierFlagsCache": 0,
            "name": IdentifierObject {
              "end": 17,
              "escapedText": "React",
              "flags": 0,
              "modifierFlagsCache": 0,
              "parent": [Circular],
              "pos": 11,
              "transformFlags": 0,
            },
            "parent": [Circular],
            "pos": 6,
            "transformFlags": 0,
          },
          "parent": [Circular],
          "pos": 6,
          "transformFlags": 0,
        },
        "kind": 249,
        "modifierFlagsCache": 536870912,
        "modifiers": undefined,
        "moduleSpecifier": TokenObject {
          "end": 30,
          "flags": 0,
          "kind": 10,
          "modifierFlagsCache": 0,
          "parent": [Circular],
          "pos": 22,
          "text": "react",
          "transformFlags": 0,
        },
        "parent": [Circular],
        "pos": 0,
        "transformFlags": 0,
      },
      "fileName": "/Users/I0459/scratch/personal/reactui/server/#/utils/tsNode/__fixtures__/findNode.tsx",
      "flags": 0,
      "hasNoDefaultLib": false,
      "identifierCount": 7,
      "identifiers": Map {
        "React" => "React",
        "react" => "react",
        "Component" => "Component",
        "div" => "div",
        "button" => "button",
      },
      "isDeclarationFile": false,
      "kind": 284,
      "languageVariant": 1,
      "languageVersion": 7,
      "libReferenceDirectives": Array [],
      "modifierFlagsCache": 0,
      "nodeCount": 31,
      "parent": undefined,
      "parseDiagnostics": Array [],
      "pos": 0,
      "pragmas": Map {},
      "referencedFiles": Array [],
      "scriptKind": 4,
      "statements": Array [
        NodeObject {
          "decorators": undefined,
          "end": 31,
          "flags": 0,
          "importClause": NodeObject {
            "end": 17,
            "flags": 0,
            "kind": 250,
            "modifierFlagsCache": 0,
            "namedBindings": NodeObject {
              "end": 17,
              "flags": 0,
              "kind": 251,
              "modifierFlagsCache": 0,
              "name": IdentifierObject {
                "end": 17,
                "escapedText": "React",
                "flags": 0,
                "modifierFlagsCache": 0,
                "parent": [Circular],
                "pos": 11,
                "transformFlags": 0,
              },
              "parent": [Circular],
              "pos": 6,
              "transformFlags": 0,
            },
            "parent": [Circular],
            "pos": 6,
            "transformFlags": 0,
          },
          "kind": 249,
          "modifierFlagsCache": 536870912,
          "modifiers": undefined,
          "moduleSpecifier": TokenObject {
            "end": 30,
            "flags": 0,
            "kind": 10,
            "modifierFlagsCache": 0,
            "parent": [Circular],
            "pos": 22,
            "text": "react",
            "transformFlags": 0,
          },
          "parent": [Circular],
          "pos": 0,
          "transformFlags": 0,
        },
        NodeObject {
          "declarationList": NodeObject {
            "declarations": Array [
              NodeObject {
                "end": 107,
                "flags": 0,
                "initializer": NodeObject {
                  "body": NodeObject {
                    "end": 107,
                    "expression": NodeObject {
                      "children": Array [
                        TokenObject {
                          "containsOnlyTriviaWhiteSpaces": true,
                          "end": 71,
                          "flags": 0,
                          "kind": 11,
                          "modifierFlagsCache": 0,
                          "parent": [Circular],
                          "pos": 66,
                          "text": "
    ",
                          "transformFlags": 0,
                        },
                        NodeObject {
                          "children": Array [
                            TokenObject {
                              "containsOnlyTriviaWhiteSpaces": false,
                              "end": 87,
                              "flags": 0,
                              "kind": 11,
                              "modifierFlagsCache": 0,
                              "parent": [Circular],
                              "pos": 79,
                              "text": "Click me",
                              "transformFlags": 0,
                            },
                          ],
                          "closingElement": NodeObject {
                            "end": 96,
                            "flags": 0,
                            "kind": 263,
                            "modifierFlagsCache": 0,
                            "parent": [Circular],
                            "pos": 87,
                            "tagName": IdentifierObject {
                              "end": 95,
                              "escapedText": "button",
                              "flags": 0,
                              "modifierFlagsCache": 0,
                              "parent": [Circular],
                              "pos": 89,
                              "transformFlags": 0,
                            },
                            "transformFlags": 0,
                          },
                          "end": 96,
                          "flags": 0,
                          "kind": 260,
                          "modifierFlagsCache": 0,
                          "openingElement": NodeObject {
                            "attributes": NodeObject {
                              "end": 78,
                              "flags": 0,
                              "kind": 268,
                              "modifierFlagsCache": 0,
                              "parent": [Circular],
                              "pos": 78,
                              "properties": Array [],
                              "transformFlags": 0,
                            },
                            "end": 79,
                            "flags": 0,
                            "kind": 262,
                            "modifierFlagsCache": 0,
                            "parent": [Circular],
                            "pos": 71,
                            "tagName": IdentifierObject {
                              "end": 78,
                              "escapedText": "button",
                              "flags": 0,
                              "modifierFlagsCache": 0,
                              "parent": [Circular],
                              "pos": 72,
                              "transformFlags": 0,
                            },
                            "transformFlags": 0,
                            "typeArguments": undefined,
                          },
                          "parent": [Circular],
                          "pos": 71,
                          "transformFlags": 0,
                        },
                        TokenObject {
                          "containsOnlyTriviaWhiteSpaces": true,
                          "end": 99,
                          "flags": 0,
                          "kind": 11,
                          "modifierFlagsCache": 0,
                          "parent": [Circular],
                          "pos": 96,
                          "text": "
  ",
                          "transformFlags": 0,
                        },
                      ],
                      "closingElement": NodeObject {
                        "end": 105,
                        "flags": 0,
                        "kind": 263,
                        "modifierFlagsCache": 0,
                        "parent": [Circular],
                        "pos": 99,
                        "tagName": IdentifierObject {
                          "end": 104,
                          "escapedText": "div",
                          "flags": 0,
                          "modifierFlagsCache": 0,
                          "parent": [Circular],
                          "pos": 101,
                          "transformFlags": 0,
                        },
                        "transformFlags": 0,
                      },
                      "end": 105,
                      "flags": 0,
                      "kind": 260,
                      "modifierFlagsCache": 0,
                      "openingElement": NodeObject {
                        "attributes": NodeObject {
                          "end": 65,
                          "flags": 0,
                          "kind": 268,
                          "modifierFlagsCache": 0,
                          "parent": [Circular],
                          "pos": 65,
                          "properties": Array [],
                          "transformFlags": 0,
                        },
                        "end": 66,
                        "flags": 0,
                        "kind": 262,
                        "modifierFlagsCache": 0,
                        "parent": [Circular],
                        "pos": 58,
                        "tagName": IdentifierObject {
                          "end": 65,
                          "escapedText": "div",
                          "flags": 0,
                          "modifierFlagsCache": 0,
                          "parent": [Circular],
                          "pos": 62,
                          "transformFlags": 0,
                        },
                        "transformFlags": 0,
                        "typeArguments": undefined,
                      },
                      "parent": [Circular],
                      "pos": 58,
                      "transformFlags": 0,
                    },
                    "flags": 0,
                    "kind": 195,
                    "modifierFlagsCache": 0,
                    "parent": [Circular],
                    "pos": 56,
                    "transformFlags": 0,
                  },
                  "end": 107,
                  "equalsGreaterThanToken": TokenObject {
                    "end": 56,
                    "flags": 0,
                    "kind": 37,
                    "modifierFlagsCache": 0,
                    "parent": [Circular],
                    "pos": 53,
                    "transformFlags": 0,
                  },
                  "flags": 0,
                  "kind": 197,
                  "modifierFlagsCache": 536870912,
                  "modifiers": undefined,
                  "parameters": Array [],
                  "parent": [Circular],
                  "pos": 50,
                  "transformFlags": 0,
                  "typeParameters": undefined,
                },
                "kind": 237,
                "modifierFlagsCache": 0,
                "name": IdentifierObject {
                  "end": 48,
                  "escapedText": "Component",
                  "flags": 0,
                  "modifierFlagsCache": 0,
                  "parent": [Circular],
                  "pos": 38,
                  "transformFlags": 0,
                },
                "parent": [Circular],
                "pos": 38,
                "transformFlags": 0,
                "type": undefined,
              },
            ],
            "end": 107,
            "flags": 2,
            "kind": 238,
            "modifierFlagsCache": 0,
            "parent": [Circular],
            "pos": 31,
            "transformFlags": 0,
          },
          "decorators": undefined,
          "end": 108,
          "flags": 0,
          "kind": 219,
          "modifierFlagsCache": 0,
          "modifiers": undefined,
          "parent": [Circular],
          "pos": 31,
          "transformFlags": 0,
        },
        NodeObject {
          "decorators": undefined,
          "end": 135,
          "expression": IdentifierObject {
            "end": 134,
            "escapedText": "Component",
            "flags": 0,
            "modifierFlagsCache": 0,
            "parent": [Circular],
            "pos": 124,
            "transformFlags": 0,
          },
          "flags": 0,
          "kind": 254,
          "modifierFlagsCache": 0,
          "modifiers": undefined,
          "parent": [Circular],
          "pos": 108,
          "transformFlags": 0,
        },
      ],
      "text": "import * as React from 'react';

const Component = () => (
  <div>
    <button>Click me</button>
  </div>
);

export default Component;
",
      "transformFlags": 0,
      "typeReferenceDirectives": Array [],
    },
  },
  "level": 0,
  "message": "Node not found",
  "stack": undefined,
}
`;

exports[`findNode success 1`] = `
NodeObject {
  "children": Array [
    TokenObject {
      "containsOnlyTriviaWhiteSpaces": true,
      "end": 71,
      "flags": 0,
      "kind": 11,
      "modifierFlagsCache": 0,
      "parent": [Circular],
      "pos": 66,
      "text": "
    ",
      "transformFlags": 0,
    },
    NodeObject {
      "children": Array [
        TokenObject {
          "containsOnlyTriviaWhiteSpaces": false,
          "end": 87,
          "flags": 0,
          "kind": 11,
          "modifierFlagsCache": 0,
          "parent": [Circular],
          "pos": 79,
          "text": "Click me",
          "transformFlags": 0,
        },
      ],
      "closingElement": NodeObject {
        "end": 96,
        "flags": 0,
        "kind": 263,
        "modifierFlagsCache": 0,
        "parent": [Circular],
        "pos": 87,
        "tagName": IdentifierObject {
          "end": 95,
          "escapedText": "button",
          "flags": 0,
          "modifierFlagsCache": 0,
          "parent": [Circular],
          "pos": 89,
          "transformFlags": 0,
        },
        "transformFlags": 0,
      },
      "end": 96,
      "flags": 0,
      "kind": 260,
      "modifierFlagsCache": 0,
      "openingElement": NodeObject {
        "attributes": NodeObject {
          "end": 78,
          "flags": 0,
          "kind": 268,
          "modifierFlagsCache": 0,
          "parent": [Circular],
          "pos": 78,
          "properties": Array [],
          "transformFlags": 0,
        },
        "end": 79,
        "flags": 0,
        "kind": 262,
        "modifierFlagsCache": 0,
        "parent": [Circular],
        "pos": 71,
        "tagName": IdentifierObject {
          "end": 78,
          "escapedText": "button",
          "flags": 0,
          "modifierFlagsCache": 0,
          "parent": [Circular],
          "pos": 72,
          "transformFlags": 0,
        },
        "transformFlags": 0,
        "typeArguments": undefined,
      },
      "parent": [Circular],
      "pos": 71,
      "transformFlags": 0,
    },
    TokenObject {
      "containsOnlyTriviaWhiteSpaces": true,
      "end": 99,
      "flags": 0,
      "kind": 11,
      "modifierFlagsCache": 0,
      "parent": [Circular],
      "pos": 96,
      "text": "
  ",
      "transformFlags": 0,
    },
  ],
  "closingElement": NodeObject {
    "end": 105,
    "flags": 0,
    "kind": 263,
    "modifierFlagsCache": 0,
    "parent": [Circular],
    "pos": 99,
    "tagName": IdentifierObject {
      "end": 104,
      "escapedText": "div",
      "flags": 0,
      "modifierFlagsCache": 0,
      "parent": [Circular],
      "pos": 101,
      "transformFlags": 0,
    },
    "transformFlags": 0,
  },
  "end": 105,
  "flags": 0,
  "kind": 260,
  "modifierFlagsCache": 0,
  "openingElement": NodeObject {
    "attributes": NodeObject {
      "end": 65,
      "flags": 0,
      "kind": 268,
      "modifierFlagsCache": 0,
      "parent": [Circular],
      "pos": 65,
      "properties": Array [],
      "transformFlags": 0,
    },
    "end": 66,
    "flags": 0,
    "kind": 262,
    "modifierFlagsCache": 0,
    "parent": [Circular],
    "pos": 58,
    "tagName": IdentifierObject {
      "end": 65,
      "escapedText": "div",
      "flags": 0,
      "modifierFlagsCache": 0,
      "parent": [Circular],
      "pos": 62,
      "transformFlags": 0,
    },
    "transformFlags": 0,
    "typeArguments": undefined,
  },
  "parent": NodeObject {
    "end": 107,
    "expression": [Circular],
    "flags": 0,
    "kind": 195,
    "modifierFlagsCache": 0,
    "parent": NodeObject {
      "body": [Circular],
      "end": 107,
      "equalsGreaterThanToken": TokenObject {
        "end": 56,
        "flags": 0,
        "kind": 37,
        "modifierFlagsCache": 0,
        "parent": [Circular],
        "pos": 53,
        "transformFlags": 0,
      },
      "flags": 0,
      "kind": 197,
      "modifierFlagsCache": 536870912,
      "modifiers": undefined,
      "parameters": Array [],
      "parent": NodeObject {
        "end": 107,
        "flags": 0,
        "initializer": [Circular],
        "kind": 237,
        "modifierFlagsCache": 0,
        "name": IdentifierObject {
          "end": 48,
          "escapedText": "Component",
          "flags": 0,
          "modifierFlagsCache": 0,
          "parent": [Circular],
          "pos": 38,
          "transformFlags": 0,
        },
        "parent": NodeObject {
          "declarations": Array [
            [Circular],
          ],
          "end": 107,
          "flags": 2,
          "kind": 238,
          "modifierFlagsCache": 0,
          "parent": NodeObject {
            "declarationList": [Circular],
            "decorators": undefined,
            "end": 108,
            "flags": 0,
            "kind": 219,
            "modifierFlagsCache": 0,
            "modifiers": undefined,
            "parent": SourceFileObject {
              "amdDependencies": Array [],
              "bindDiagnostics": Array [],
              "bindSuggestionDiagnostics": undefined,
              "checkJsDirective": undefined,
              "end": 136,
              "endOfFileToken": TokenObject {
                "end": 136,
                "flags": 0,
                "kind": 1,
                "modifierFlagsCache": 0,
                "parent": [Circular],
                "pos": 135,
                "transformFlags": 0,
              },
              "externalModuleIndicator": NodeObject {
                "decorators": undefined,
                "end": 31,
                "flags": 0,
                "importClause": NodeObject {
                  "end": 17,
                  "flags": 0,
                  "kind": 250,
                  "modifierFlagsCache": 0,
                  "namedBindings": NodeObject {
                    "end": 17,
                    "flags": 0,
                    "kind": 251,
                    "modifierFlagsCache": 0,
                    "name": IdentifierObject {
                      "end": 17,
                      "escapedText": "React",
                      "flags": 0,
                      "modifierFlagsCache": 0,
                      "parent": [Circular],
                      "pos": 11,
                      "transformFlags": 0,
                    },
                    "parent": [Circular],
                    "pos": 6,
                    "transformFlags": 0,
                  },
                  "parent": [Circular],
                  "pos": 6,
                  "transformFlags": 0,
                },
                "kind": 249,
                "modifierFlagsCache": 536870912,
                "modifiers": undefined,
                "moduleSpecifier": TokenObject {
                  "end": 30,
                  "flags": 0,
                  "kind": 10,
                  "modifierFlagsCache": 0,
                  "parent": [Circular],
                  "pos": 22,
                  "text": "react",
                  "transformFlags": 0,
                },
                "parent": [Circular],
                "pos": 0,
                "transformFlags": 0,
              },
              "fileName": "/Users/I0459/scratch/personal/reactui/server/#/utils/tsNode/__fixtures__/findNode.tsx",
              "flags": 0,
              "hasNoDefaultLib": false,
              "identifierCount": 7,
              "identifiers": Map {
                "React" => "React",
                "react" => "react",
                "Component" => "Component",
                "div" => "div",
                "button" => "button",
              },
              "isDeclarationFile": false,
              "kind": 284,
              "languageVariant": 1,
              "languageVersion": 7,
              "libReferenceDirectives": Array [],
              "modifierFlagsCache": 0,
              "nodeCount": 31,
              "parent": undefined,
              "parseDiagnostics": Array [],
              "pos": 0,
              "pragmas": Map {},
              "referencedFiles": Array [],
              "scriptKind": 4,
              "statements": Array [
                NodeObject {
                  "decorators": undefined,
                  "end": 31,
                  "flags": 0,
                  "importClause": NodeObject {
                    "end": 17,
                    "flags": 0,
                    "kind": 250,
                    "modifierFlagsCache": 0,
                    "namedBindings": NodeObject {
                      "end": 17,
                      "flags": 0,
                      "kind": 251,
                      "modifierFlagsCache": 0,
                      "name": IdentifierObject {
                        "end": 17,
                        "escapedText": "React",
                        "flags": 0,
                        "modifierFlagsCache": 0,
                        "parent": [Circular],
                        "pos": 11,
                        "transformFlags": 0,
                      },
                      "parent": [Circular],
                      "pos": 6,
                      "transformFlags": 0,
                    },
                    "parent": [Circular],
                    "pos": 6,
                    "transformFlags": 0,
                  },
                  "kind": 249,
                  "modifierFlagsCache": 536870912,
                  "modifiers": undefined,
                  "moduleSpecifier": TokenObject {
                    "end": 30,
                    "flags": 0,
                    "kind": 10,
                    "modifierFlagsCache": 0,
                    "parent": [Circular],
                    "pos": 22,
                    "text": "react",
                    "transformFlags": 0,
                  },
                  "parent": [Circular],
                  "pos": 0,
                  "transformFlags": 0,
                },
                [Circular],
                NodeObject {
                  "decorators": undefined,
                  "end": 135,
                  "expression": IdentifierObject {
                    "end": 134,
                    "escapedText": "Component",
                    "flags": 0,
                    "modifierFlagsCache": 0,
                    "parent": [Circular],
                    "pos": 124,
                    "transformFlags": 0,
                  },
                  "flags": 0,
                  "kind": 254,
                  "modifierFlagsCache": 0,
                  "modifiers": undefined,
                  "parent": [Circular],
                  "pos": 108,
                  "transformFlags": 0,
                },
              ],
              "text": "import * as React from 'react';

const Component = () => (
  <div>
    <button>Click me</button>
  </div>
);

export default Component;
",
              "transformFlags": 0,
              "typeReferenceDirectives": Array [],
            },
            "pos": 31,
            "transformFlags": 0,
          },
          "pos": 31,
          "transformFlags": 0,
        },
        "pos": 38,
        "transformFlags": 0,
        "type": undefined,
      },
      "pos": 50,
      "transformFlags": 0,
      "typeParameters": undefined,
    },
    "pos": 56,
    "transformFlags": 0,
  },
  "pos": 58,
  "transformFlags": 0,
}
`;

exports[`findNode success 2`] = `
"<div>
    <button>Click me</button>
  </div>"
`;
